--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class = "container">
     <div class = "meal-wrapper">
       <div class = "meal-search">
-        <h1 class="title">triipe</h1>
+        <h1 class="title">Triipe</h1>
         <h2 class = "subtitle">RECIPES FOR HEALTHY MEALS</h2>
 
         <div class = "meal-search-box">
